fix: list item overflow

--- a/styles/components/_general.scss
+++ b/styles/components/_general.scss
@@ -31,7 +31,6 @@
       &-item {
         flex: 1;
         border-radius: 0.2rem;
-        overflow: hidden;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
         &_link {
